--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,10 @@ selenium>=4.16.0
 beautifulsoup4>=4.12.0
 pandas>=2.2.3
 webdriver-manager>=4.0.1  # This helps manage ChromeDriver automatically
+contourpy==1.3.2
+cycler==0.12.1
+fonttools==4.57.0
+kiwisolver==1.4.8
+matplotlib==3.10.1
+pillow==11.2.1
+pyparsing==3.2.3
