--- a/requirements.txt
+++ b/requirements.txt
@@ -53,7 +53,7 @@ jupyterlab_server==2.27.3
 jupyterlab_widgets==3.0.14
 kiwisolver==1.4.8
 MarkupSafe==3.0.2
-matplotlib==3.10.1
+matplotlib>=3.5.0
 matplotlib-inline==0.1.7
 mistune==3.1.3
 narwhals==1.39.0
@@ -67,7 +67,7 @@ numpy==2.2.4
 outcome==1.3.0.post0
 overrides==7.7.0
 packaging==24.2
-pandas==2.2.3
+pandas>=1.5.0
 pandasql==0.7.3
 pandocfilters==1.5.1
 parso==0.8.4
@@ -91,11 +91,11 @@ pytz==2025.2
 PyYAML==6.0.2
 pyzmq==26.4.0
 referencing==0.36.2
-requests==2.31.0
+requests>=2.31.0
 rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
 rpds-py==0.24.0
-seaborn==0.13.2
+seaborn>=0.12.0
 selenium==4.32.0
 Send2Trash==1.8.3
 setuptools==79.0.0
